# simplefileshare

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.devcontainer /: devcontainer.json
.github/workflows/: push.yml
src/: main.rs  utils.rs
