[package]
name = "simplefileshare"
version = "0.1.0"
edition = "2021"
authors = ["Hugefiver", "Anthony Hoo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "multipart", "ws", "headers", "http2"] }
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive"] }
futures-util = "0.3.27"
lazy_static = "1.4.0"
num = "0.4.1"
rand = "0.8.5"
regex = "1.9.3"
serde = { version = "1.0.180", features = ["derive", "serde_derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.6.2", features = ["sqlite", "uuid", "macros", "chrono", "offline", "runtime-tokio-rustls", "any"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
tower = { version = "0.4.13", features = ["tokio", "tokio-stream"] }
xxhash-rust = { version = "0.8.6", features = ["const_xxh3", "xxh3"] }
